--- a/index.html
+++ b/index.html
@@ -728,7 +728,61 @@ Kecepatan yang harus ditambahkan adalah 50 – 40 = 10 km/jam.</p>
 					<div class="col-md-9">
 						<div id="whywhy">
 							<p>
-								aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf 
+								<b><font size="4"><font color="Blue">A.  PENGERTIAN KOEFISIEN, VARIABEL, KONSTANTA, DAN SUKU</font></font></b><br />
+<br />
+Perhatikan ilustrasi berikut :<br />
+<br />
+<font face="Times New Roman"><i><font size="3">Bonar dan Cut Mimi membeli alat-alat tulis di koperasi sekolah. Mereka membeli 5 buku tulis, 2 pensil, dan 3 bolpoin. <br />
+Jika buku tulis dinyatakan dengan x, pensil dengan y, dan bolpoin dengan z, maka Bonar dan Cut Mimi membeli 5x + 2y + 3z.</font></i></font><br />
+<br />
+Selanjutnya, bentuk-bentuk <font color="SeaGreen"><b>5x + 2y + 3z, 2x2, 4xy2, 5x2 – 1, dan (x – 1) (x + 3)</b></font> disebut <i>bentuk-bentuk aljabar</i>. <br />
+Sebelum mempelajari faktorisasi suku aljabar, marilah kita ingat kembali istilah-istilah yang terdapat pada bentuk aljabar.<br />
+<br />
+<b><font color="Purple">1.   VARIABEL</font></b><br />
+<br />
+<b><i><font color="Purple">Variabel </font></i></b>adalah lambang pengganti suatu bilangan yang belum diketahui nilainya dengan jelas. Variabel disebut juga peubah. Variabel biasanya dilambangkan dengan huruf kecil a, b, c, ... z.<br />
+<br />
+Contoh :<br />
+<br />
+Tulislah setiap kalimat berikut dengan menggunakan variabel sebagai pengganti bilangan yang belum diketahui nilainya<ol style="list-style-type: lower-alpha"><li>Jumlah dua bilangan ganjil berurutan adalah 20.</li>
+<li>Suatu bilangan jika dikalikan 5 kemudian dikurangi 3, hasilnya adalah 12.</li>
+</ol>Jawab :<ol style="list-style-type: lower-alpha"><li>Misalkan bilangan tersebut x dan x + 2, berarti x + x + 2 = 20.</li>
+<li>Misalkan bilangan tersebut x, berarti 5x – 3 = 12.</li>
+</ol><br />
+<b><font color="Purple">2.   KONSTANTA</font></b><br />
+<br />
+<b><font color="DarkOrchid">Konstanta </font></b>adalah Suku dari suatu bentuk aljabar yang berupa bilangan dan tidak memuat variabel.<br />
+<br />
+Contoh :<br />
+<br />
+Tentukan Konstanta dari bentuk aljabar berikut ini <br />
+a.  <img src="http://www.codecogs.com/eq.latex?{2x}^{2}%20+%203xy%20+%207x%20-%20y%20-%208" border="0" alt="" /><br />
+<br />
+b.  <img src="http://www.codecogs.com/eq.latex?3%20-%20{4x}^{2}%20-%20x" border="0" alt="" /><br />
+<br />
+Penyelesaian / Jawab :<ol style="list-style-type: lower-alpha"><li>Konstanta adalah suku yang tidak memuat variabel, sehingga konstanta dari <b>2x2 + 3xy + 7x – y – 8, <font color="Purple">adalah –8</font></b>.</li>
+<li>Konstanta dari <b>3 – 4x2 – x,<font color="Purple"> adalah 3</font></b>.</li>
+</ol><br />
+<br />
+<b><font color="Purple">3.   KOEFISIEN</font></b><br />
+<br />
+Koefisien pada bentuk aljabar adalah <b><i>faktor konstanta dari suatu suku pada bentuk aljabar</i></b>.<br />
+<br />
+Contoh :<br />
+<br />
+Tentukan koefisien x pada bentuk aljabar berikut :<ol style="list-style-type: lower-alpha"><li>5x2y + 3x</li>
+<li>2x2 + 6x – 3</li>
+</ol>Penyelesaian / Jawab :<ol style="list-style-type: lower-alpha"><li>Koefisien x dari 5x2y + 3x adalah 3.</li>
+<li>Koefisien x dari 2x2 + 6x – 3 adalah 6</li>
+</ol><br />
+<br />
+<b><font color="Purple">4.   SUKU</font></b><br />
+<br />
+<b><font color="Purple">Suku</font></b> adalah variabel beserta koefisiennya atau konstanta pada bentuk aljabar yang dipisahkan oleh operasi jumlah atau selisih.<ol style="list-style-type: lower-alpha"><li><b><i>Suku satu</i></b> adalah bentuk aljabar yang tidak dihubungkan oleh operasi jumlah atau selisih.  <i>Contoh : 3x, 4a2, –2ab, ...</i></li>
+<li><b><i>Suku dua</i></b> adalah bentuk aljabar yang dihubungkan oleh satu operasi jumlah atau selisih. <i>Contoh : a2 + 2, x + 2y, 3x2 – 5x, ...</i></li>
+<li><b><i>Suku tiga</i></b> adalah bentuk aljabar yang dihubungkan oleh dua operasi jumlah atau selisih. <i>Contoh: 3x2 + 4x – 5, 2x + 2y – xy, ...</i></li>
+</ol><br />
+Bentuk aljabar yang mempunyai lebih dari dua suku disebut suku banyak atau <b><font color="Purple">POLINOM</font></b>
 							</p>
 						</div>
 					</div>
@@ -767,7 +821,72 @@ Kecepatan yang harus ditambahkan adalah 50 – 40 = 10 km/jam.</p>
 					<div class="col-md-9">
 						<div id="whywhy">
 							<p>
-								aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj
+								<b><font color="Blue">1.  Pengertian HIMPUNAN </font></b><br />
+<br />
+<b>Himpunan</b> adalah <blockquote>kumpulan benda atau objek yang dapat didefinisikan dengan jelas, sehingga dengan tepat dapat diketahui objek yang termasuk himpunan dan yang tidak termasuk dalam himpunan tersebut.</blockquote>Sekarang perhatkan contoh berikut ini :<br />
+<br />
+a.  Kumpulan Lukisan indah<br />
+b.  Kumpulan wanita cantik Indonesia<br />
+<br />
+Kumpulan lukisan indah tidak dapat disebut himpunan, karena lukisan indah menurut seseorang belum tentu indah menurut orang lain. Dengan kata lain, kumpulan lukisan indah tidak dapat didefinisikan dengan jelas.<br />
+<br />
+Demikian halnya dengan kumpulan wanita cantik di Indonesia. Wanita cantik menurut seseorang belum tentu cantik menurut orang lain. Jadi, kumpulan wanita cantik bukan termasuk himpunan.<br />
+<br />
+<br />
+<b><font color="Blue">2.  NOTASI HIMPUNAN</font></b><br />
+<br />
+Suatu himpunan biasanya diberi nama atau dilambangkan dengan huruf besar (kapital) A, B, C, ..., Z. Adapun benda atau objek yang termasuk dalam himpunan tersebut ditulis dengan menggunakan pasangan kurung kurawal {...}.<br />
+<br />
+Setiap benda atau objek yang berada dalam suatu himpunan disebut anggota atau elemen dari himpunan itu dan dinotasikan dengan <img src="http://www.codecogs.com/eq.latex?\in" border="0" alt="" />. Adapun benda atau objek yang tidak termasuk dalam suatu himpunan dikatakan bukan anggota himpunan dan dinotasikan dengan <img src="http://indonesiaindonesia.com/attachments/download/15530d1312524027-himpunan-bagian.gif" border="0" alt="" /><br />
+<br />
+Contoh Soal :<br />
+<br />
+Nyatakan himpunan berikut dengan memberikan tanda kurung kurawal :<br />
+<br />
+1.   A  adalah himpunan bilangan cacah kurang dari 6<br />
+2.   P  adalah himpunan huruf-huruf vokal<br />
+3.   Q  adalah himpunan tiga binatang buas<br />
+<br />
+Jawab :<br />
+<br />
+A adalah himpunan bilangan cacah kurang dari 6.<br />
+Anggota himpunan bilangan cacah kurang dari 6 adalah 0, 1, 2, 3, 4, 5.<br />
+Jadi, A = {0, 1, 2, 3, 4, 5}.<br />
+<br />
+P adalah himpunan huruf-huruf vokal.<br />
+Anggota himpunan huruf-huruf vokal adalah a, e, i, o, dan u, sehingga ditulis <br />
+P = {a, e, i, o, u}.<br />
+<br />
+Q adalah himpunan tiga binatang buas.<br />
+Anggota himpunan binatang buas antara lain harimau, singa, dan serigala.<br />
+Jadi, Q = {harimau, singa, serigala}.<br />
+<br />
+Banyak anggota suatu himpunan dinyatakan dengan n. Jika A = {0, 1, 2, 3, 4, 5} maka n(A) = banyak anggota himpunan A = 6. Banyaknya anggota himpunan A dinyatakan dengan n(A).<br />
+<br />
+Dalam matematika, beberapa huruf besar digunakan sebagai lambang himpunan bilangan tertentu, di antaranya sebagai berikut :<br />
+<br />
+<table border="1"><tr><td width="75;" align="center">Huruf A</td><td>Lambang himpunan bilangan asli. A = {1, 2, 3, 4, ... }</td></tr><tr><td align="center">Huruf B</td><td>Lambang himpunan bilangan bulat. B = {..., –3, –2, –1, 0, 1, 2, 3, ...}</td></tr><tr><td align="center">Huruf C</td><td>Lambang himpunan bilangan cacah. C = {0, 1, 2, 3, ... }</td></tr><tr><td align="center">Huruf L</td><td>Lambang bilangan ganjil. L = {1, 3, 5, 7, 9, 11, 13, ...}</td></tr><tr><td align="center">Huruf N</td><td>Lambang bilangan genap. N = { 12, 14, 20, 24, ...}</td></tr><tr><td align="center">Huruf Q</td><td>Lambang bilangan rasional</td></tr></table><br />
+<br />
+<b><font color="Blue">3.  Menyatakan Suatu Himpunan</font></b><br />
+<br />
+Suatu himpunan dapat dinyatakan dengan tiga cara sebagai berikut :<br />
+<br />
+a.   Dengan kata-kata<blockquote>Dengan cara menyebutkan semua syarat / sifat keanggotaannya.<br />
+Contoh : <br />
+P adalah himpunan bilangan prima antara 10 dan 40<br />
+di tulis P = { bilangan prima antara 10 dan 40}<br />
+</blockquote>b.   Dengan notasi pembentuk himpunan<blockquote>Sama seperti menyatakan himpunan dengan kata-kata, pada cara ini disebutkan semua syarat/sifat keanggotannya. Namun, anggota himpunan dinyatakan dengan suatu peubah. Peubah yang biasa digunakan adalah x atau y.<br />
+Contoh : <br />
+P : {bilangan prima antara 10 dan 40}.<br />
+Dengan notasi pembentuk himpunan, ditulis<br />
+P = {10 &lt; x &lt; 40, x <img src="http://www.codecogs.com/eq.latex?\in" border="0" alt="" /> bilangan prima}.<br />
+</blockquote>c.   Dengan mendaftar anggota-anggotanya<blockquote>Dengan cara menyebutkan anggota-anggotanya, menuliskannya<br />
+dengan menggunakan kurung kurawal, dan anggotaanggotanya<br />
+dipisahkan dengan tanda koma.<br />
+Contoh :<br />
+P = {11, 13, 17, 19, 23, 29, 31, 37}<br />
+A = {1, 2, 3, 4, 5}</blockquote><br />
+
 							</p>
 						</div>
 					</div>
