--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@ function hasil1()
 						<ul class="nav">
 						  <li><a href="#">Apa itu Segitiga?</a></li>
 						  <li><a href="#">Pengertian Segitiga</a></li>
+						   <li><a href="#soalseg">Soal Latihan</a></li>  
 						</ul>
 					  </div><!--/.well -->
 					</div>
@@ -581,6 +582,7 @@ function hasil1()
 										lurus dan melalui titik tengah sisi tersebut. </p>
 									</li>
 								</ul>
+								
 							</div>
 							<br />
 							<div class="alert alert-info">
@@ -645,6 +647,36 @@ function hasil1()
 									(mengonstruksi) garis berat lainnya dari segitiga ABC.</li>
 								</ol>
 							</ul>
+							
+							<form name="chek2" method="post">
+		<div>
+			<h3 id="soalseg">Soal Latihan</h3>
+			<pre>
+			<h4>1. berapakah panjang sisi miring segitiga jika kedua sisinya memiliki panjang 3cm dan 4cm = .... cm
+	<input type="radio" name="satu" value="5" id="5" >5      </input> <input type="radio" name="satu">12</input>
+	<input type="radio" name="satu" value="b"        >6      </input> <input type="radio" name="satu" value="d">13</input>
+			
+			<br>2. tentukan keliling sigitiga phytagoras, jika sisi miring=5cm dan alas 3cm = ... cm
+	<input type="radio" name="dua" value="a"         >13      </input> <input type="radio" name="dua" value="c">10</input>
+	<input type="radio" name="dua" value="12" id="12">12      </input> <input type="radio" name="dua">22</input>
+			
+			<br>3. tentukan luas segitiga ABC dik, a=4cm, c=5cm dimana C merupakan sisi miring = ... cm
+	<input type="radio" name="tiga" value="a">5      </input> <input type="radio" name="tiga" value="c">7</input>
+	<input type="radio" name="tiga" id="6"   >6      </input> <input type="radio" name="tiga" value="8">8</input>
+			
+			<br>4. berapa sisi mirimg (r) sigitiga ABC dimana a=5,t=12 = ...cm
+	<input type="radio" name="empat" value="ff">16        </input> <input type="radio" name="empat" value="c">14</input>
+	<input type="radio" name="empat" value="b" >15        </input> <input type="radio" name="empat" id="13">13</input>
+			
+			<br>5. berdasarkan soal no 4, tentukan luas segitiga ABC = ... cm
+	<input type="radio" name="lima" value="a" >22       </input> <input type="radio" name="lima" id="30">30</input>
+	<input type="radio" name="lima" value="dd">44       </input> <input type="radio" name="lima" value="d">31</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil2()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor2" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
