js Soal segitiga

--- a/index.html
+++ b/index.html
@@ -647,7 +647,29 @@ function hasil1()
 									(mengonstruksi) garis berat lainnya dari segitiga ABC.</li>
 								</ol>
 							</ul>
-							
+                 <script language="javascript">
+function hasil2()
+{
+	var jlh=0;
+	
+	if(document.getElementById("5").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("12").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("6").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("13").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("30").checked==true){
+	jlh++;}
+	
+	return document.chek2.skor2.value=jlh;
+}
+</script>
 							<form name="chek2" method="post">
 		<div>
 			<h3 id="soalseg">Soal Latihan</h3>
