--- a/index.html
+++ b/index.html
@@ -844,6 +844,29 @@ function hasil2()
 									</tr>
 								</thead>
 							</table>
+					 <script language="javascript">
+function hasil3()
+{
+	var jlh=0;
+	
+	if(document.getElementById("1/6").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("1/2").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("1/12").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("1/3").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("7/36").checked==true){
+	jlh++;}
+	
+	return document.chek3.skor3.value=jlh;
+}
+</script>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
