--- a/index.html
+++ b/index.html
@@ -867,6 +867,35 @@ function hasil3()
 	return document.chek3.skor3.value=jlh;
 }
 </script>
+<form name="chek3" method="post">
+		<div>
+			<h3 id="soalpel">Soal Latihan</h3>
+			<pre>
+			<h4>1. pada pelemparan sebuah dadu, tentukan peluang munculnya mata dadu 3 = ...
+	<input type="radio" name="satu" value="5"  >1/2      </input> <input type="radio" name="satu">1/5</input>
+	<input type="radio" name="satu" value="b"  >1/3      </input> <input type="radio" name="satu" id="1/6">1/6</input>
+			
+			<br>2. pada pelemparan sebuah dadu, tentukan peluang munculnya mata dadu prima = ...
+	<input type="radio" name="dua" value="a"          >1/13      </input> <input type="radio" name="dua" value="c">1</input>
+	<input type="radio" name="dua" value="12" id="1/2">1/2        </input> <input type="radio" name="dua" value="ff">3/4</input>
+			
+			<br>3. dua buah dadu dilempar secara bersamaan, maka tentukan peluang munculnya mata dadu yg berjumlah 10
+	<input type="radio" name="tigaa" value="a"   >1/13      </input> <input type="radio" name="tigaa" value="c">1</input>
+	<input type="radio" name="tigaa" id="1/12"   >1/12      </input> <input type="radio" name="tigaa" value="8">3/4</input>
+			
+			<br>4. dua buah dadu dilempar secara bersamaan, maka tentukan peluang munculnya mata dadu 4
+	<input type="radio" name="tiga" value="a"   >1         </input> <input type="radio" name="tiga" id="1/3">1/3</input>
+	<input type="radio" name="tiga" value="ss"   >1/2      </input> <input type="radio" name="tiga" value="8">1/4</input>
+			
+			<br>5. berdasarkan soal no 4, tentukan peluang munculnya mata dadu yg berjumlah 4 dan 5
+	<input type="radio" name="lima" value="a" >1/12       </input> <input type="radio" name="lima" id="7/36">7/36</input>
+	<input type="radio" name="lima" value="dd">1/36       </input> <input type="radio" name="lima" value="d">1</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil3()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor3" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
