--- a/index.html
+++ b/index.html
@@ -978,6 +978,7 @@ function hasil3()
 						  <li><a href="#bandingnilai">Perbandingan Senilai</a></li>
 						  <li><a href="#contohsoalper">Contoh Soal</a></li>
 						  <li><a href="#perbaliknilai">Perbandingan berbalik nilai</a></li>
+						  <li><a href="#soalbanding">Latihan Soal</a></li>
 						</ul>
 					  </div><!--/.well -->
 					</div>
@@ -1121,6 +1122,43 @@ function hasil3()
                             Perhitungan perbandingan berbalik nilai dilakukan dengan membalik salah satu ruas:<br />
                             <img class="alignnone size-full wp-image-89" src="http://belajar0k3.files.wordpress.com/2011/04/t_19b.jpg?w=640" alt=""   /><br />
                             Kecepatan yang harus ditambahkan adalah 50 – 40 = 10 km/jam.</p>
+							
+<form name="chek5" method="post">
+		<div>
+			<h3 id="soalbanding">Soal Latihan</h3>
+			<pre>
+			<h4>1. Jarak kota Samarinda dan Tarakan di propinsi Kaltim adalah
+    672 km. Tentukan jarak kedua kota tersebut pada peta berskala
+    1 : 6.000.000. = ...
+	<input type="radio" name="satu" value="5" id="11,2" > 11,2       </input> <input type="radio" name="satu"> 13</input>
+	<input type="radio" name="satu" value="b"  > 11,5       </input> <input type="radio" name="satu" > 13,5</input>
+			
+			<br>2. Jarak antara Samarinda dan Sangkulirang dalam suatu peta
+       adalah 6 cm. Jarak sebenarnya kedua kota itu adalah 180 km.
+    Tentukan skala peta tersebut. = ...
+	<input type="radio" name="dua" value="a"          > 1:5.000.000        </input> <input type="radio" name="dua" value="c" id="1:3.000.000">1:3.000.000</input>
+	<input type="radio" name="dua" value="12"         > 1:4.000.000        </input> <input type="radio" name="dua" value="ff">1:2.000.000</input>
+			
+			<br>3. Dua orang siswa dapat membawa 15 buah buku. Berapa buah
+    buku yang dapat dibawa 8 orang siswa = .. buah
+	<input type="radio" name="tigaa" value="a"   >50 buah      </input> <input type="radio" name="tigaa" value="c">70 buah</input>
+	<input type="radio" name="tigaa" id="60"     >60 buah      </input> <input type="radio" name="tigaa" value="8">80 buah</input>
+			
+			<br>4. Perbadingan umur ayah dan Andi adalah 5:2. Jika jumlah umur mereka
+    adalah 56 tahun,berapakah umur mereka masing-masing?
+	<input type="radio" name="tiga" value="a" id="40 and 16"  >ayah 40 dan andi 16 tahun         </input> <input type="radio" name="tiga">ayah 39 dan andi 15 tahun</input>
+	<input type="radio" name="tiga" value="ss"   >ayah 37 dan andi 18 tahun         </input> <input type="radio" name="tiga" value="8">ayah 38 dan andi 17 tahun</input>
+			
+			<br>5. Perbadingan umur nenek dan Ibu adalah 7:4. Jika selisih umur mereka
+    adalah 27 tahun, maka tentukan umur nenek = ...tahun
+	<input type="radio" name="lima" value="a" >65       </input> <input type="radio" name="lima" id="63">63</input>
+	<input type="radio" name="lima" value="dd">64       </input> <input type="radio" name="lima" value="d">66</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil5()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor3" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
