--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,29 @@ function hasil3()
                             Perhitungan perbandingan berbalik nilai dilakukan dengan membalik salah satu ruas:<br />
                             <img class="alignnone size-full wp-image-89" src="http://belajar0k3.files.wordpress.com/2011/04/t_19b.jpg?w=640" alt=""   /><br />
                             Kecepatan yang harus ditambahkan adalah 50 – 40 = 10 km/jam.</p>
-							
+<script language="javascript">
+function hasil5()
+{
+	var jlh=0;
+	
+	if(document.getElementById("11,2").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("1:3.000.000").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("60").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("40 and 16").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("63").checked==true){
+	jlh++;}
+	
+	return document.chek5.skor3.value=jlh;
+}
+</script>							
 <form name="chek5" method="post">
 		<div>
 			<h3 id="soalbanding">Soal Latihan</h3>
