--- a/index.html
+++ b/index.html
@@ -1216,6 +1216,7 @@ function hasil5()
 						  <li><a href="#konstanta">Pengertian Konstanta</a></li>
 						  <li><a href="#koefisien">Pengertian Koefisien</a></li>
 						  <li><a href="#suku">Suku</a></li>
+						   <li><a href="#soalaljabar">Latihan Soal</a></li>
 						</ul>
 					  </div><!--/.well -->
 					</div>
@@ -1277,7 +1278,37 @@ function hasil5()
                                 <li><b><i>Suku tiga</i></b> adalah bentuk aljabar yang dihubungkan oleh dua operasi jumlah atau selisih. <i>Contoh: 3x2 + 4x – 5, 2x + 2y – xy, ...</i></li>
                                 </ol><br />
                                 Bentuk aljabar yang mempunyai lebih dari dua suku disebut suku banyak atau <b><font color="Purple">POLINOM</font></b>
-						                     	           
+	
+	
+	<form name="chek6" method="post">
+		<div>
+			<h3 id="soalaljabar">Soal Latihan</h3>
+			<pre>
+			<h4>1. Faktorkan bentuk aljabar dari  5ab + 10b :
+	<input type="radio" name="satu" id="5b(a + 2)"  > 5b(a + 2)      </input> <input type="radio" name="satu"> 5a(b + 2)</input>
+	<input type="radio" name="satu" value="b"  > 2b(a + 5)      </input> <input type="radio" name="satu" id="1/6"> 2a(b + 5)</input>
+			
+			<br>2. Faktorkan bentuk aljabar dari d. 20p2 – 5q2 :
+	<input type="radio" name="dua" value="a"          > 5(2q + p)(2p – q)        </input> <input type="radio" name="dua" value="c"> 5(2p + q)(2q – p)</input>
+	<input type="radio" name="dua" value="12" id="5(2p + q)(2p – q)"> 5(2p + q)(2p – q)        </input> <input type="radio" name="dua" value="ff"> 5(2q + q)(2p – p)</input>
+			
+			<br>3. Faktorkan bentuk aljabar dari 2x2 + 11x + 12 
+	<input type="radio" name="tigaa" value="a"   >(x + 4)(2x - 3)      </input> <input type="radio" name="tigaa" value="c" id="(x + 4)(2x + 3)">(x + 4)(2x + 3)</input>
+	<input type="radio" name="tigaa"    >(x - 4)(2x - 3)       </input> <input type="radio" name="tigaa" value="8">(x - 4)(2x + 3)</input>
+			
+			<br>4. Faktorkan bentuk aljabar dari x2 + 7x + 12
+	<input type="radio" name="tiga" value="a" id="(x + 4)(x + 3)"   > (x + 4)(x + 3)         </input> <input type="radio" name="tiga"> (x + 4)(x - 3)</input>
+	<input type="radio" name="tiga" value="ss"   > (x - 4)(x - 3)           </input> <input type="radio" name="tiga" value="8"> (x - 4)(x + 3)</input>
+			
+			<br>5. Faktorkan bentuk kuadrat dari 5x2 + 3x − 2 
+	<input type="radio" name="lima" value="a" >(x + 1)(5x + 2)       </input> <input type="radio" name="lima" id="7/36">(x - 1)(5x + 2)</input>
+	<input type="radio" name="lima" value="dd">(x - 1)(5x − 2)        </input> <input type="radio" name="lima" value="d" id="(x + 1)(5x − 2)">(x + 1)(5x − 2)</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil6()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor3" size="3" >
+		</div>
+	</form>					                     	           
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
