--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,29 @@ function hasil5()
                                 <li><b><i>Suku tiga</i></b> adalah bentuk aljabar yang dihubungkan oleh dua operasi jumlah atau selisih. <i>Contoh: 3x2 + 4x – 5, 2x + 2y – xy, ...</i></li>
                                 </ol><br />
                                 Bentuk aljabar yang mempunyai lebih dari dua suku disebut suku banyak atau <b><font color="Purple">POLINOM</font></b>
+	<script language="javascript">
+function hasil6()
+{
+	var jlh=0;
 	
+	if(document.getElementById("5b(a + 2)").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("5(2p + q)(2p – q)").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("(x + 4)(2x + 3)").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("(x + 4)(x + 3)").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("(x + 1)(5x − 2)").checked==true){
+	jlh++;}
+	
+	return document.chek6.skor3.value=jlh;
+}
+</script>
 	
 	<form name="chek6" method="post">
 		<div>
