--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						   <li><a href="#soalbilbul">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
-                      <button class="punch">Download E-Book</button>
+                      <a href="https://www.dropbox.com/s/ex2ocvtsnuq376j/MTK.%20KLS%207%20BAB%201.%20BILANGAN%20BULAT.pdf"><button class="punch">Download E-Book</button></a>
 					</div>
 					
 					<div class="col-md-9">
