--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ function hasil()
 
 						</ul>
 					  </div><!--/.well -->
-                      <button class="punch">Download E-Book</button>
+                      <a href="https://www.dropbox.com/s/s9pqg4ml2j58fno/MTK.%20KLS%208%20BAB%206.%20LINGKARAN.pdf"><button class="punch">Download E-Book</button></a>
 					</div>
 					
 					<div class="col-md-9">
