--- a/index.html
+++ b/index.html
@@ -1702,7 +1702,7 @@ function hasil6()
 						  <li><a href="#jsudut">Jenis-Jenis Sudut</a></li>
 						</ul>
 					  </div><!--/.well -->
-                      <button class="punch">Download E-Book</button>
+                      <a href="https://www.dropbox.com/s/bi71n9i4rcl468g/MTK.%20KLS%207%20BAB%207.%20BANGUN%20RUANG%20SISI%20DARTAR.pdf"><button class="punch">Download E-Book</button></a>
 					</div>
 					
 					<div class="col-md-9">
@@ -1922,7 +1922,7 @@ function hasil6()
 						  <li><a href="#">Video Tentang Bilangan Berpangkat</a></li>
 						</ul>
 					  </div><!--/.well -->
-                      <button class="punch">Download E-Book</button>
+                      <a href="https://www.dropbox.com/s/hg6cktbkxvk73cr/MTK.%20KLS%209%20BAB%205.%20BILANGAN%20BERPANGKAT%20DAN%20BENTUK%20AKAR.pdf"><button class="punch">Download E-Book</button></a>
 					</div>
 					
 					<div class="col-md-9">
