--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ function hasil2()
 						  <li><a href="#soalpel">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
-                      <button class="punch">Download E-Book</button>
+                      <a href="https://www.dropbox.com/s/g9ir44kwuqrnjuy/MTK.%20KLS%209%20BAB%204.%20PELUANG.pdf"><button class="punch">Download E-Book</button></a>
 					</div>
 					
 					<div class="col-md-9">
@@ -2060,7 +2060,7 @@ function hasil6()
 						  <li><a href="#deret">Deret Aritmatika</a></li>
 						</ul>
 					  </div><!--/.well -->
-                      <button class="punch">Download E-Book</button>
+                      <a href="https://www.dropbox.com/s/julnteejyhu3ifg/MTK.%20KLS%209%20BAB%206.%20BARISAN%20DAN%20DERET.pdf"><button class="punch">Download E-Book</button></a>
 					</div>
 					
 					<div class="col-md-9">
