--- a/index.html
+++ b/index.html
@@ -1372,6 +1372,7 @@ function hasil6()
                           <li><a href="#notasihimp">Notasi Himpunan</a></li>  
 						  <li><a href="#himp">Menyatakn Himpunan</a></li>
 						  <li><a href="#hbt">Himpunan Berhingga & Tak Hingga</a></li>
+						  <li><a href="#soalhimpunan">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
                       <a href="https://www.dropbox.com/s/xd9q8lc60fef8hf/MTK.%20KLS%207%20BAB%206.%20HIMPUNAN.pdf"><button class="punch">Download E-Book</button></a>
@@ -1575,6 +1576,35 @@ function hasil6()
 									</tr>
 								</thead>
 							</table>
+
+	<form name="chek6" method="post">
+		<div>
+			<h3 id="soalhimpunan">Soal Latihan</h3>
+			<pre>
+			<h4>1. Penderita flu burung maupun muntaber yang dirawat di rumah sakit sebanyak 86 orang,
+    35 orang menderita flu burung, dan 15 orang menderita flu burung juga muntaber.
+    Banyak penderita yang hanya menderita muntaber adalah . . .
+	<input type="radio" name="satu" id="5b(a + 2)"  >  20 orang       </input> <input type="radio" name="satu">  50 orang </input>
+	<input type="radio" name="satu" value="b"  >  36 orang       </input> <input type="radio" name="satu" id="51 orang">  51 orang </input>
+			
+			<br>2. Dalam sebuah kelas terdapat 20 siswa gemar kimia, 15 siswa gemar fisika, 8 siswa gemar
+	keduanya.	Banyak siswa dalam kelas adalah . . . .
+	<input type="radio" name="dua" value="a"          >  23 siswa        </input> <input type="radio" name="dua" value="c" id="27 siswa">  27 siswa</input>
+	<input type="radio" name="dua" value="12" >  28 siswa        </input> <input type="radio" name="dua" value="ff">  43 siswa</input>
+			
+			<br>3. Dalam satu kelas, 25 orang di antaranya senang badminton, 35 orang senang volli, 
+	dan 15 orang senang keduanya. Banyak siswa dalam kelas itu adalah . . ..
+	<input type="radio" name="tigaa" value="a"   >42 orang      </input> <input type="radio" name="tigaa" value="c" id="45 orang" >45 orang</input>
+	<input type="radio" name="tigaa"    >60 orang       </input> <input type="radio" name="tigaa" value="8">75 orang</input>
+			
+			
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil6()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor3" size="3" >
+		</div>
+	</form>					             
+							
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
