soal complite himpunan

--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@ function hasil6()
 								</thead>
 							</table>
 
-	<form name="chek6" method="post">
+	<form name="chek7" method="post">
 		<div>
 			<h3 id="soalhimpunan">Soal Latihan</h3>
 			<pre>
@@ -1594,14 +1594,24 @@ function hasil6()
 			
 			<br>3. Dalam satu kelas, 25 orang di antaranya senang badminton, 35 orang senang volli, 
 	dan 15 orang senang keduanya. Banyak siswa dalam kelas itu adalah . . ..
-	<input type="radio" name="tigaa" value="a"   >42 orang      </input> <input type="radio" name="tigaa" value="c" id="45 orang" >45 orang</input>
-	<input type="radio" name="tigaa"    >60 orang       </input> <input type="radio" name="tigaa" value="8">75 orang</input>
+	<input type="radio" name="tigaa" value="a"   > 42 orang      </input>  <input type="radio" name="tigaa" value="c" id="45 orang" > 45 orang</input>
+	<input type="radio" name="tigaa"    > 60 orang       </input> <input type="radio" name="tigaa" value="8"> 75 orang</input>
 			
+			<br>4. Diketahui 
+	K = {bilangan prima antara 2 dan 12} 
+	L = {4 bilangan kelipatan 3 yang pertama}
+	Irisan (intersection) himpunan K dan himpunan L adalah.....
+	<input type="radio" name="tiga" value="a"    > {3,5,6,7,9,11,12}          </input> <input type="radio" name="tiga"> {3,6,9}</input>
+	<input type="radio" name="tiga" value="ss"   > {5,6,7,9,11,12}             </input> <input type="radio" name="tiga" value="8" id="{3}"> {3}</input>
 			
+			<br>5. Jika himpunan B bagian dari himpunan A dengan n(A) = 25 dan n(B) = 17,
+	maka n himpunan gabungan A dan B adalah.....	
+	<input type="radio" name="lima" value="a" > 8       </input>    <input type="radio" name="lima" > 17</input>
+	<input type="radio" name="lima" value="dd" id="11"> 11        </input> <input type="radio" name="lima" value="d" > 25</input>
 			</h4>
 			</pre>
-			<input type="button" onClick="hasil6()"  value="Check">  <input type="reset" value="reset">
-			Score : <input type="text" disabled name="skor3" size="3" >
+			<input type="button" onClick="hasil7()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
 		</div>
 	</form>					             
 							
