--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,29 @@ function hasil6()
 									</tr>
 								</thead>
 							</table>
-
+<script language="javascript">
+function hasil7()
+{
+	var jlh=0;
+	
+	if(document.getElementById("51 orang").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("27 siswa").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("45 orang").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("{3}").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("11").checked==true){
+	jlh++;}
+	
+	return document.chek7.skor.value=jlh;
+}
+</script>
 	<form name="chek7" method="post">
 		<div>
 			<h3 id="soalhimpunan">Soal Latihan</h3>
