soal bangun datar lanjut

--- a/index.html
+++ b/index.html
@@ -948,20 +948,27 @@ function hasil3()
 			<h3 id="soalbangundatar">Soal Latihan</h3>
 			<pre>
 			<h4>1. jika persegi panjang ABCD memiliki panjang dan lebar 4 cm dan 6 cm, tentukan L dan K ....
-	<input type="radio" name="satu" id="24 dan 20"  >  24 dan 20       </input> <input type="radio" name="satu">  50 dan 20 </input>
-	<input type="radio" name="satu" value="b"  >  20 dan 10       </input> <input type="radio" name="satu" id="51 orang">  24 dan 22 </input>
+	<input type="radio" name="satu" id="24 dan 20"  >  24 dan 20       </input> <input type="radio" name="satu"> 50 dan 20 </input>
+	<input type="radio" name="satu" value="b"       >  20 dan 10       </input> <input type="radio" name="satu" id="51 orang"> 24 dan 22 </input>
 			
 			<br>2. Pak Subur memiliki sebidang kebun berbentuk persegipanjang dengan luas 2 hektar.
 	Jika lebar kebun adalah 125 m, tentukan panjang kebun pak Subur tersebut!
 	<input type="radio" name="dua" value="a" id="160 m">  160 m        </input> <input type="radio" name="dua" value="c" >  130 m</input>
-	<input type="radio" name="dua" value="12" >  128 m        </input> <input type="radio" name="dua" value="ff">  150 m</input>
+	<input type="radio" name="dua" value="12"          >  128 m        </input> <input type="radio" name="dua" value="ff">  150 m</input>
 			
 			<br>3. Selembar kain bentuk persegipanjang memiliki ukuran perbandingan panjang dan lebar
 	adalah 3 : 2. Jika luas penampang kain adalah 54 m2 tentukan panjang dan lebar kain tersebut!
-	<input type="radio" name="tigaa" value="a"   > 8 dan 6 meter      </input>  <input type="radio" name="tigaa" value="c" > 8 dan 9 meter</input>
-	<input type="radio" name="tigaa"   id="9 dan 6 meter" > 9 dan 6 meter       </input> <input type="radio" name="tigaa" value="8"> 6 dan 8 meter</input>
+	<input type="radio" name="tigaa" value="a"            > 8 dan 6 meter       </input> <input type="radio" name="tigaa" value="c" > 8 dan 9 meter</input>
+	<input type="radio" name="tigaa"   id="9 dan 6 meter" > 9 dan 6 meter       </input> <input type="radio" name="tigaa" value="8" > 6 dan 8 meter</input>
 			
-	
+			<br>4. Sebuah persegi memiliki sisi sepanjang 6 cm. Tentukan luas dan keliling persegi tersebut!
+	<input type="radio" name="empat" value="a"   > 36 dan 20 cm </input>			<input type="radio" name="empat" value="a" id="36 dan 24"  > 36 dan 24 cm </input>
+	<input type="radio" name="empat" value="a"   > 30 dan 20 cm </input>			<input type="radio" name="empat" value="a"   > 30 dan 24 cm </input>
+			<br>5. Lukisan berbentuk persegi panjang berukuran 40 cm x 50 cm dipasang pada bingkai 
+	berbentuk persegi dengan panjang sisi 60 cm!
+	Tentukan luas daerah yang tidak tertutup gambar .... cm2
+	<input type="radio" name="empat" value="a"   > 1300 </input>			<input type="radio" name="empat" value="a" > 1500 </input>
+	<input type="radio" name="empat" value="a"   > 1400 </input>			<input type="radio" name="empat" value="a" id="1600"  > 1600 </input>
 			</h4>
 			</pre>
 			<input type="button" onClick="hasil7()"  value="Check">  <input type="reset" value="reset">
